# memtree

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.memtree/architecture/: _summary.md  auto-promotion.md  concurrency.md  on-disk-format.md  path-validation.md  stdin-content.md
.memtree/commands/: _summary.md  delete.md  ls-and-inspect.md  move.md  recall.md  search.md  store.md
.memtree/commits/: _summary.md  session-history.md
.memtree/decisions/: _summary.md  cwd-local-root.md  inspect-implementation.md  skill-format.md
.memtree/project/: _summary.md  dependencies.md  overview.md  workflow.md
.memtree/skills/: _summary.md  memtree-load.md  memtree-save.md
.memtree/source/: _summary.md  cli-rs.md  commands-mod.md  config-rs.md  error-rs.md  ls-rs.md  main-rs.md  other-modules.md
.memtree/testing/: _summary.md  integration-tests.md  unit-tests.md
skills/memtree-load/: README.md  SKILL.md
skills/memtree-save/: README.md  SKILL.md
src/: cli.rs  config.rs  error.rs  leaf.rs  lock.rs  main.rs  summary.rs  tree.rs
src/commands/: delete.rs  ls.rs  mod.rs  mv.rs  recall.rs  search.rs  store.rs
tests/: smoke.rs
