[package]
name = "memtree"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
fs4 = "0.12"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.26.0"
